rendered/envs/zoo/cnpg/namespace-cnpg.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    a8r.io/repository: git@github.com:kbudde/lab.git
  name: cnpg
  namespace: cnpg
