rendered/envs/zoo/cnpg/service-cnpg-webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    a8r.io/repository: git@github.com:kbudde/lab.git
  labels:
    app.kubernetes.io/instance: cloudnative-pg
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: cloudnative-pg
    app.kubernetes.io/version: 1.22.0
    helm.sh/chart: cloudnative-pg-0.20.0
  name: cnpg-webhook-service
  namespace: cnpg
spec:
  ports:
    - name: webhook-server
      port: 443
      targetPort: webhook-server
  selector:
    app.kubernetes.io/instance: cloudnative-pg
    app.kubernetes.io/name: cloudnative-pg
  type: ClusterIP
